fix overflow issue

--- a/style.css
+++ b/style.css
@@ -662,6 +662,8 @@ i {
 
 .ind-org-name {
   margin: 0;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .ind-org-type-pill {
@@ -703,4 +705,7 @@ i {
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
